# tauri-vue-starter

./: .gitignore  LICENSE  README.md  package.json  rsbuild.config.js
src/: App.vue  index.js  router.js  store.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/pages/: changelog.vue  home.vue  setting.vue
src/theme/: index.css  tailwind-mini.css
src/tool/: common.js  ui.js
src/widget/: bottom-menu.vue  footer.vue  layout.vue  tag.vue
